# Minecraft-Clone

./: .gitignore  CMakeLists.txt  Makefile  Minecraft Clone  README.md  TODO.md  compile_commands.json  imgui.ini
res/images/: blocks.xcf  hotbar.xcf
res/shaders/: block.fs  block.vs  chunk.vert  test.fs  test.vs  texture_2d.vs
src/: CMakeLists.txt  game.cpp  game.h  game.hpp  main.cpp
src/gfx/: CMakeLists.txt  gfx.h  gfx.hpp  mesh_buffer.cpp  mesh_buffer.hpp  renderer.cpp  renderer.h  renderer.hpp  shader.cpp  shader.h  shader.hpp  sprite_atlas.cpp  sprite_atlas.h  sprite_atlas.hpp  texture.cpp  texture.h  texture.hpp  vao.cpp  vao.h  vao.hpp  vbo.cpp  vbo.h  vbo.hpp  window.cpp  window.h  window.hpp
src/input/: CMakeLists.txt  input.h  input.hpp  keyboard.cpp  keyboard.h  keyboard.hpp  mouse.cpp  mouse.h  mouse.hpp
src/player/: CMakeLists.txt  camera.cpp  camera.h  camera.hpp  player.cpp  player.h  player.hpp  player_mesh.cpp  player_mesh.h  player_mesh.hpp  ray.cpp  ray.h  ray.hpp
src/ui/: crosshair.cpp  crosshair.h  crosshair.hpp  hotbar.cpp  hotbar.h  hotbar.hpp  ui.cpp  ui.h  ui.hpp  ui_component.cpp  ui_component.h  ui_component.hpp  ui_manager.cpp  ui_manager.hpp
src/ui/gui/: CMakeLists.txt  gui_manager.cpp  gui_manager.h
src/ui/hud/: CMakeLists.txt  crosshair.cpp  crosshair.h  hotbar.cpp  hotbar.h  hud_component.cpp  hud_component.h  hud_manager.cpp  hud_manager.h
src/util/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.hpp  direction.h  direction.hpp  math.cpp  math.h  math.hpp  print.cpp  print.h  thread_pool.cpp  thread_pool.h  util.h  util.hpp
src/world/: CMakeLists.txt  block.cpp  block.h  block.hpp  block_data.cpp  block_data.h  block_data.hpp  block_mesh.cpp  block_mesh.cpp.bak  block_mesh.h  block_mesh.h.bak  block_mesh.hpp  chunk.cpp  chunk.h  chunk.h.bak  chunk.hpp  chunk_mesh.cpp  chunk_mesh.cpp.bak  chunk_mesh.h  chunk_mesh.h.bak  chunk_mesh.hpp  world.cpp  world.h  world.hpp
src/world/generation/: generation.cpp  generation.hpp
tests/: block_data  block_data.cpp
